0.13.3.AA (Pre-Release):
-----------------------
- Synced with Upstream v0.13.3
- Adds `DecoupleF10` Feature
  * Unlinks the `F10` key from the built in screenshot feature
  * Allows the use of 3rd party screenshot tools that also map the `F10` key
  * The `\` (forward slash) key remains linked to the built in screenshot feature
  * This is activated by a new `decouple_f10` configuration token
- Fixes `DisableAMFI` Feature
  * The feature had been disabled under some circumstances
  * This bug was introduced in v0.13.2.AP (Commit 8705fdb)
- Improves `HandleSignedInt` Function
  * Ensures the function always returns a negative value when required
- Improves `FindMenuShortcutEntry` Function
  * Now initially tries a exact match of the stored string against available entries
  * A match against substrings is only tried if an exact match is not found
- Improves `SupplyUEFI` Feature
  * The `QueryVariableInfo` Runtime service is now also emulated
  * Avoid crashes from unavailability if called on emulated UEFI 2.x
  * The UEFI 2.x emulation now returns an `EFI_UNSUPPORTED` error instead
- Amends CSR Operation Coverage
  * Extends limitation of misc SIP/CSR items to Apple firmware pending review of applicability
- Amends Pointer Token Priority
  * The `enable_mouse` setting now always takes precedence over the `enable_touch` setting
  * Changes inherited upstream implementation based on order of appearance in the config file


0.13.2.AP (19 Apr 2022):
-----------------------
- Adds `PanicFilter` Feature
  * RefindPlus now discards NVRAM write attempts of kernel panic information by default
  * Can be disabled using a new `decline_panicfilter` configuration token
  * Currently limited to when directly booting MacOS from RefindPlus
- Adds `SupplyAppleFB` Feature
  * Attempts to provide AppleFramebuffers on Macs when absent under certain circumstances
  * Can be disabled using a new `decline_applefb` configuration token
- Adds `TextHelp` Feature