@@ -79,6 +79,7 @@ hidden_icons_ignore   |Disables scanning for `.VolumeIcon` image icons if not re
 hidden_icons_prefer   |Prioritises `.VolumeIcon` image icons when available
 icon_row_move         |Repositions the main screen icon rows (vertically)
 icon_row_tune         |Finetunes the resulting `icon_row_move` outcome
+nvram_variable_limit  |Limits NVRAM write attempts to the specified variable size
 pass_uga_through      |Provides UGA instance on GOP to permit EfiBoot with modern GPUs
 provide_console_gop   |Fixes issues with GOP on some legacy units
 ransom_drives         |Frees partitions locked by how certain firmware load inbuilt drivers
